Update documentation according to v2

--- a/docs/src/04.use-cases/03.interactive-server.md
+++ b/docs/src/04.use-cases/03.interactive-server.md
@@ -14,6 +14,8 @@ participant page as SignIn Page
 
 box rgba(101, 63, 232, 0.5) Blazor.Auth
 participant userServiceServer as IUserService (Server)
+participant blazorClient as Client Machine
+participant blazorServer as Blazor Server
 end
 
 participant authService as IAuthenticationService (Server)
@@ -22,46 +24,23 @@ user ->>+ page: Submit Sign-In Form
 page ->>+ userServiceServer: SignInAsync(signInPayload)
 note over page,userServiceServer: Resolve IUserService from DI<br/> and call it's `SignInAsync` method.
 
-userServiceServer ->>+ authService: SignInAsync(signInPayload)
+userServiceServer ->>+ blazorClient: Remote JS Interop
+blazorClient ->>+ blazorServer: HTTP Request to <br/> Sign-In endpoint
+blazorServer ->>+ authService: SignInAsync(signInPayload)
 authService ->> authService: Your server-side sign-in logic
 
-authService -->>- userServiceServer: AuthenticationResult
-userServiceServer -->> userServiceServer: Update authentication cookies
+authService -->>- blazorServer: AuthenticationResult
+blazorServer -->> blazorServer: Update authentication cookies
 
-userServiceServer -->>- page: AuthenticationResult
+blazorServer -->>- blazorClient: AuthenticationResultInfo
+note over blazorClient,blazorServer: Updated cookies will be<br/>attached to the HTTP response.
+
+blazorClient -->>- userServiceServer: AuthenticationResultInfo
+
+userServiceServer -->>- page: AuthenticationResultInfo
 page -->>- user: Continue, <br/> e.g. redirect to home page, <br/> or other custom logic
 
-note over user,userServiceServer: Upon receiving AuthenticationResult from IUserService, <br/> do a page refresh in order to refresh the User's AuthenticationState<br/><br/> Example: NavigationManager.NavigateTo("/", true).
-```
-
-### Sign-Up
-
-```mermaid
-sequenceDiagram
-
-actor user as User
-participant page as SignUp Page
-
-box rgba(101, 63, 232, 0.5) Blazor.Auth
-participant userServiceServer as IUserService (Server)
-end
-
-participant authService as IAuthenticationService (Server)
-
-user ->>+ page: Submit Sign-Up Form
-page ->>+ userServiceServer: SignUpAsync(signUpPayload)
-note over page,userServiceServer: Resolve IUserService from DI<br/> and call it's `SignUpAsync` method.
-
-userServiceServer ->>+ authService: SignUpAsync(signUpPayload)
-authService ->> authService: Your server-side sign-up logic
-
-authService -->>- userServiceServer: AuthenticationResult
-userServiceServer -->> userServiceServer: Update authentication cookies
-
-userServiceServer -->>- page: AuthenticationResult
-page -->>- user: Continue, <br/> e.g. redirect to home page, <br/> or other custom logic
-
-note over user,userServiceServer: Upon receiving AuthenticationResult from IUserService, <br/> do a page refresh in order to refresh the User's AuthenticationState<br/><br/> Example: NavigationManager.NavigateTo("/", true).
+note over user,userServiceServer: Upon receiving AuthenticationResultInfo from IUserService, <br/> do a page refresh in order to refresh the User's AuthenticationState<br/><br/> Example: NavigationManager.NavigateTo("/", true).
 ```
 
 ### Sign-Out
@@ -70,19 +49,69 @@ note over user,userServiceServer: Upon receiving AuthenticationResult from IUser
 sequenceDiagram
 
 actor user as User
-participant page as Page
+participant page as SignOut Page
 
 box rgba(101, 63, 232, 0.5) Blazor.Auth
 participant userServiceServer as IUserService (Server)
+participant blazorClient as Client Machine
+participant blazorServer as Blazor Server
 end
 
-user ->>+ page: Initiate Sign-Out
+user ->>+ page: Submit Sign-Out Form
 page ->>+ userServiceServer: SignOutAsync()
 note over page,userServiceServer: Resolve IUserService from DI<br/> and call it's `SignOutAsync` method.
-userServiceServer -->> userServiceServer: Remove authentication cookies
+
+userServiceServer ->>+ blazorClient: Remote JS Interop
+blazorClient ->>+ blazorServer: HTTP Request to <br/> Sign-Out endpoint
+
+blazorServer -->> blazorServer: Clear authentication cookies
+
+blazorServer -->>- blazorClient: #32;
+note over blazorClient,blazorServer: Blazor.Auth will clear the user's <br/> authentication cookies <br/> by marking them as expired <br/> in the HTTP response.
+
+blazorClient -->>- userServiceServer: #32;
 
 userServiceServer -->>- page: #32;
 page -->>- user: Continue, <br/> e.g. redirect to home page, <br/> or other custom logic
 
-note over user,userServiceServer: Upon sign-out process completion, <br/> do a page refresh in order to refresh the User's AuthenticationState<br/><br/> Example: NavigationManager.NavigateTo("/", true).
+note over user,userServiceServer: Upon finishing method execution, <br/> do a page refresh in order to refresh the User's AuthenticationState<br/><br/> Example: NavigationManager.NavigateTo("/", true).
+```
+
+### Sign-Up
+
+```mermaid
+sequenceDiagram
+
+actor user as User
+participant page as SignIn Page
+
+box rgba(101, 63, 232, 0.5) Blazor.Auth
+participant userServiceServer as IUserService (Server)
+participant blazorClient as Client Machine
+participant blazorServer as Blazor Server
+end
+
+participant authService as IAuthenticationService (Server)
+
+user ->>+ page: Submit Sign-Up Form
+page ->>+ userServiceServer: SignUpAsync(signUpPayload)
+note over page,userServiceServer: Resolve IUserService from DI<br/> and call it's `SignUpAsync` method.
+
+userServiceServer ->>+ blazorClient: Remote JS Interop
+blazorClient ->>+ blazorServer: HTTP Request to <br/> Sign-Up endpoint
+blazorServer ->>+ authService: SignUpAsync(signUpPayload)
+authService ->> authService: Your server-side sign-up logic
+
+authService -->>- blazorServer: AuthenticationResult
+blazorServer -->> blazorServer: Update authentication cookies
+
+blazorServer -->>- blazorClient: AuthenticationResultInfo
+note over blazorClient,blazorServer: Updated cookies will be<br/>attached to the HTTP response.
+
+blazorClient -->>- userServiceServer: AuthenticationResultInfo
+
+userServiceServer -->>- page: AuthenticationResultInfo
+page -->>- user: Continue, <br/> e.g. redirect to home page, <br/> or other custom logic
+
+note over user,userServiceServer: Upon receiving AuthenticationResultInfo from IUserService, <br/> do a page refresh in order to refresh the User's AuthenticationState<br/><br/> Example: NavigationManager.NavigateTo("/", true).
 ```
