--- a/docs/src/04.use-cases/01.static-ssr.md
+++ b/docs/src/04.use-cases/01.static-ssr.md
@@ -30,10 +30,36 @@ authService ->> authService: Your server-side sign-in logic
 authService -->>- userService: AuthenticationResult
 
 userService -->> userService: Update authentication cookies
-userService -->>- page: AuthenticationResult
+userService -->>- page: AuthenticationResultInfo
 
 page -->>- user:  Form submission HTTP Response
-note over user,userService: Updated cookies will be attached to the HTTP response.
+note over user,page: Updated cookies will be <br/> attached to the HTTP response.
+```
+
+### Sign-Out
+
+```mermaid
+
+sequenceDiagram
+
+actor user as User
+participant page as Page
+
+box rgba(101, 63, 232, 0.5) Blazor.Auth
+participant userService as IUserService (Server)
+end
+
+user ->>+ page: Submit Sign-Out Form
+
+page ->>+ userService: SignOutAsync()
+note over user,userService: Call IUserService's `SignOutAsync` method when handling sign-out form submission.
+
+userService -->> userService: Clear authentication cookies
+
+userService -->>- page: 
+
+page -->>- user:  Form submission HTTP Response
+note over user,page: Blazor.Auth will clear the user's <br/> authentication cookies <br/> by marking them as expired <br/> in the HTTP response.
 ```
 
 ### Sign-Up
@@ -57,37 +83,11 @@ note over user,userService: Call IUserService's `SignUpAsync` method when handli
 userService ->>+ authService: SignUpAsync(signUpPayload)
 authService ->> authService: Your server-side sign-up logic
 
-authService -->>- userService: AuthenticationResult
+authService -->>- userService: AuthenticationResultInfo
 
 userService -->> userService: Update authentication cookies
 userService -->>- page: AuthenticationResult
 
 page -->>- user:  Form submission HTTP Response
-note over user,userService: Updated cookies will be attached to the HTTP response.
-```
-
-### Sign-Out
-
-```mermaid
-
-sequenceDiagram
-
-actor user as User
-participant page as Page
-
-box rgba(101, 63, 232, 0.5) Blazor.Auth
-participant userService as IUserService (Server)
-end
-
-user ->>+ page: Submit Sign-Out Form
-
-page ->>+ userService: SignOutAsync()
-note over user,userService: Call IUserService's `SignOutAsync` method when handling sign-out form submission.
-
-userService -->> userService: Remove authentication cookies
-
-userService -->>- page: 
-
-page -->>- user:  Form submission HTTP Response
-note over user,userService: Blazor.Auth will remove the user's authentication cookies <br/> by marking them as expired in the HTTP response.
+note over user,page: Updated cookies will be<br/>attached to the HTTP response.
 ```
