--- a/docs/src/03.authentication.md
+++ b/docs/src/03.authentication.md
@@ -11,7 +11,7 @@ In order to implement User authentication with this library, you need to impleme
 
 Create a class for your Sign-In payload. This class will be used to pass the user's credentials to the `IAuthenticationService` implementation.
 
-> 📜
+> **Note**  
 > This class needs to be serializable, so it can be passed between the Client and Server projects over http.
 
 ```csharp
