--- a/docs/src/03.authentication.md
+++ b/docs/src/03.authentication.md
@@ -76,7 +76,7 @@ app.MapAuthEndpoints();
 
 #### User Service
 
-You can now use the `IUserService` in your Blazor Pages to Sign-In, Sign-Up, and Refresh the JWT Pair.  these actions.
+You can now use the `IUserService` in your Blazor Pages to Sign-In, Sign-Up, and Refresh the JWT Pair.
 For additional guidance, see sample flows in [Use Cases](04.use-cases.md) section.
 
 #### Token duration
