Just "Page" in sequence diagrams

--- a/docs/src/04.use-cases/01.static-ssr.md
+++ b/docs/src/04.use-cases/01.static-ssr.md
@@ -12,7 +12,7 @@ For the purposes of these sample flows, an approach utilizing form submission is
 sequenceDiagram
 
 actor user as User
-participant page as SignIn Page
+participant page as Page
 
 box rgba(101, 63, 232, 0.5) Blazor.Auth
 participant userService as IUserService (Server)
@@ -68,7 +68,7 @@ note over user,page: Blazor.Auth will clear the user's <br/> authentication cook
 sequenceDiagram
 
 actor user as User
-participant page as SignUp Page
+participant page as Page
 
 box rgba(101, 63, 232, 0.5) Blazor.Auth
 participant userService as IUserService (Server)
