--- a/docs/src/04.use-cases/02.interactive-webassembly.md
+++ b/docs/src/04.use-cases/02.interactive-webassembly.md
@@ -10,7 +10,7 @@ The following sequence diagrams illustrate the use cases for Blazor.Auth in a Bl
 sequenceDiagram
 
 actor user as User
-participant page as SignIn Page
+participant page as Page
 
 box rgba(101, 63, 232, 0.5) Blazor.Auth
 participant userServiceClient as IUserService (Client)
@@ -74,7 +74,7 @@ note over user,userServiceClient: Upon finishing method execution, <br/> do a pa
 sequenceDiagram
 
 actor user as User
-participant page as SignUp Page
+participant page as Page
 
 box rgba(101, 63, 232, 0.5) Blazor.Auth
 participant userServiceClient as IUserService (Client)
