--- a/docs/src/04.use-cases/03.interactive-server.md
+++ b/docs/src/04.use-cases/03.interactive-server.md
@@ -10,7 +10,7 @@ The following sequence diagrams illustrate the use cases for Blazor.Auth in a Bl
 sequenceDiagram
 
 actor user as User
-participant page as SignIn Page
+participant page as Page
 
 box rgba(101, 63, 232, 0.5) Blazor.Auth
 participant userServiceServer as IUserService (Server)
@@ -49,7 +49,7 @@ note over user,userServiceServer: Upon receiving AuthenticationResultInfo from I
 sequenceDiagram
 
 actor user as User
-participant page as SignOut Page
+participant page as Page
 
 box rgba(101, 63, 232, 0.5) Blazor.Auth
 participant userServiceServer as IUserService (Server)
@@ -83,7 +83,7 @@ note over user,userServiceServer: Upon finishing method execution, <br/> do a pa
 sequenceDiagram
 
 actor user as User
-participant page as SignIn Page
+participant page as Page
 
 box rgba(101, 63, 232, 0.5) Blazor.Auth
 participant userServiceServer as IUserService (Server)
