Fix wrong class mention in static sign-up seq diagram

--- a/docs/src/04.use-cases/01.static-ssr.md
+++ b/docs/src/04.use-cases/01.static-ssr.md
@@ -83,7 +83,7 @@ note over user,userService: Call IUserService's `SignUpAsync` method when handli
 userService ->>+ authService: SignUpAsync(signUpPayload)
 authService ->> authService: Your server-side sign-up logic
 
-authService -->>- userService: AuthenticationOperationInfo
+authService -->>- userService: AuthenticationResult
 
 userService -->> userService: Update authentication cookies
 userService -->>- page: AuthenticationResult
