Fix variable name

--- a/docs/src/03.authentication/01.sign-up.md
+++ b/docs/src/03.authentication/01.sign-up.md
@@ -52,7 +52,7 @@ You can now use the `IUserService` in your Blazor Pages to sign the user up:
 private async Task SignUpAsync()
 {
     // Simulating user input
-    var signInPayload = new SignUpPayload("some data");
+    var signUpPayload = new SignUpPayload("some data");
 
     // Signing the user up
     var authenticationResult = await UserService.SignUpAsync(signUpPayload);
