Update sign-in walkthrough

--- a/docs/src/03.authentication.md
+++ b/docs/src/03.authentication.md
@@ -76,7 +76,27 @@ app.MapAuthEndpoints();
 
 #### User Service
 
-You can now use the `IUserService` in your Blazor Pages to Sign-In, Sign-Up, and Refresh the JWT Pair.
+You can now use the `IUserService` in your Blazor Pages to sign the user in:
+
+```csharp
+// MyPage.razor
+
+[Inject] IUserService<SignInPayload> UserService { get; set; }
+
+private async Task SignInAsync()
+{
+    // Simulating user input
+    var signInPayload = new SignInPayload("some data");
+
+    // Signing the user in
+    var authenticationResult = await UserService.SignInAsync(signInPayload);
+
+    // Refresh the page after signing in
+    // to let Blazor know that the user's authentication state has changed
+    NavigationManager.NavigateTo(NavigationManager.Uri, true);
+}
+```
+
 For additional guidance, see sample flows in [Use Cases](04.use-cases.md) section.
 
 #### Token duration
