--- a/docs/src/03.authentication.md
+++ b/docs/src/03.authentication.md
@@ -76,7 +76,7 @@ app.MapAuthEndpoints();
 
 #### User Service
 
-You can now use the `IUserService` in your Blazor Pages to sign the user in:
+You can now use `IUserService` in your Blazor Pages to sign the user in:
 
 ```csharp
 // MyPage.razor
