--- a/docs/src/03.authentication/01.sign-up.md
+++ b/docs/src/03.authentication/01.sign-up.md
@@ -42,7 +42,7 @@ public class MyAmazingAuthenticationService : AuthenticationService<SignInPayloa
 
 #### User Service
 
-You can now use the `IUserService` in your Blazor Pages to sign the user up:
+You can now use `IUserService` in your Blazor Pages to sign the user up:
 
 ```csharp
 // MyPage.razor
