Add sequence diagrams to get the AuthenticationState

--- a/docs/src/04.use-cases/01.static-ssr.md
+++ b/docs/src/04.use-cases/01.static-ssr.md
@@ -6,6 +6,31 @@ The following sequence diagrams illustrate the use cases for Blazor.Auth in a Bl
 
 For the purposes of these sample flows, an approach utilizing form submission is used. For more information on how Blazor handles form submission in Static SSR, refer to [Blazor Documentation](https://learn.microsoft.com/en-us/aspnet/core/blazor/forms/#handle-form-submission). You can use any other approach, as long as it is compatible with Static SSR. Just resolve the `IUserService` from the DI container and call it's appropriate method - Blazor.Auth will take care of the rest.
 
+### Get AuthenticationState
+
+```mermaid
+sequenceDiagram
+
+actor user as User
+participant component as Blazor Page / Component
+
+
+box rgba(101, 63, 232, 0.5) Blazor.Auth
+participant userService as IUserService (Server)
+end
+user ->>+ component: User request
+
+component ->>+ userService: GetAuthenticationStateAsync()
+
+note over component,userService: The specifics of request flow <br /> via Blazor internal tooling are <br /> omitted for the sake of brevity.
+
+userService -->> userService: Acquire AuthenticationState <br /> using access token cookie
+
+userService -->>- component: AuthenticationState
+
+component -->>- user: #32;
+```
+
 ### Sign-In
 
 ```mermaid
