--- a/docs/src/04.use-cases/02.interactive-webassembly.md
+++ b/docs/src/04.use-cases/02.interactive-webassembly.md
@@ -4,6 +4,34 @@ Back to [Use Cases](../04.use-cases.md)
 
 The following sequence diagrams illustrate the use cases for Blazor.Auth in a Blazor application that is currently using `Interactive WebAssembly` render mode:
 
+### Get AuthenticationState
+
+```mermaid
+sequenceDiagram
+
+actor user as User
+participant component as Component
+
+box rgba(101, 63, 232, 0.5) Blazor.Auth
+participant userServiceClient as IUserService (Client)
+participant blazorServer as Blazor Server
+end
+
+user ->>+ component: User request
+component ->>+ userServiceClient: GetAuthenticationStateAsync()
+
+note over component,userServiceClient: The specifics of request flow <br /> via Blazor internal tooling are <br /> omitted for the sake of brevity.
+
+userServiceClient ->>+ blazorServer: HTTP request to <br /> "_auth/me" endpoint
+
+blazorServer -->> blazorServer: Acquire AuthenticationState <br /> using access token cookie
+blazorServer -->> userServiceClient: AuthenticationState
+
+userServiceClient -->>- component: AuthenticationState
+
+component -->>- user: #32;
+```
+
 ### Sign-In
 
 ```mermaid
