reverse incorrect changes

--- a/docs/src/04.use-cases/03.interactive-server.md
+++ b/docs/src/04.use-cases/03.interactive-server.md
@@ -81,7 +81,7 @@ note over user,userServiceServer: Upon receiving AuthenticationOperationInfo fro
 sequenceDiagram
 
 actor user as User
-participant component as Blazor Page / Component
+participant page as Page
 
 box rgba(101, 63, 232, 0.5) Blazor.Auth
 participant userServiceServer as IUserService (Server)
@@ -89,22 +89,24 @@ participant blazorClient as Client Machine
 participant blazorServer as Blazor Server
 end
 
-user ->>+ component: User request
-component ->>+ userServiceServer: GetAuthenticationStateAsync()
-
-note over component,userServiceServer: The specifics of request flow <br /> via Blazor internal tooling are <br /> omitted for the sake of brevity.
+user ->>+ page: Submit Sign-Out Form
+page ->>+ userServiceServer: SignOutAsync()
+note over page,userServiceServer: Resolve IUserService from DI<br/> and call it's `SignOutAsync` method.
 
 userServiceServer ->>+ blazorClient: Remote JS Interop
-blazorClient ->>+ blazorServer: HTTP request to <br /> "_auth/me" endpoint
+blazorClient ->>+ blazorServer: HTTP Request to <br/> Sign-Out endpoint
 
-blazorServer -->> blazorServer: Acquire AuthenticationState <br /> using access token cookie
+blazorServer -->> blazorServer: Clear authentication cookies
 
-blazorServer -->>- blazorClient: AuthenticationState
+blazorServer -->>- blazorClient: #32;
+note over blazorClient,blazorServer: Blazor.Auth will clear the user's <br/> authentication cookies <br/> by marking them as expired <br/> in the HTTP response.
 
-blazorClient -->>- userServiceServer: AuthenticationState
+blazorClient -->>- userServiceServer: #32;
 
-userServiceServer -->>- component: AuthenticationState
-component -->>- user: #32;
+userServiceServer -->>- page: #32;
+page -->>- user: Continue, <br/> e.g. redirect to home page, <br/> or other custom logic
+
+note over user,userServiceServer: Upon finishing method execution, <br/> do a page refresh in order to refresh the User's AuthenticationState<br/><br/> Example: NavigationManager.NavigateTo("/", true).
 ```
 
 ### Sign-Up
