Add sequence diagrams to get the AuthenticationState (#59)

--- a/docs/src/04.use-cases/03.interactive-server.md
+++ b/docs/src/04.use-cases/03.interactive-server.md
@@ -4,6 +4,38 @@ Back to [Use Cases](../04.use-cases.md)
 
 The following sequence diagrams illustrate the use cases for Blazor.Auth in a Blazor application that is currently using `Interactive Server` render mode:
 
+### Get AuthenticationState
+
+```mermaid
+sequenceDiagram
+
+actor user as User
+participant component as Blazor Page / Component
+
+box rgba(101, 63, 232, 0.5) Blazor.Auth
+participant userServiceServer as IUserService (Server)
+participant blazorClient as Client Machine
+participant blazorServer as Blazor Server
+end
+
+user ->>+ component: User request
+component ->>+ userServiceServer: GetAuthenticationStateAsync()
+
+note over component,userServiceServer: The specifics of request flow <br /> via Blazor internal tooling are <br /> omitted for the sake of brevity.
+
+userServiceServer ->>+ blazorClient: Remote JS Interop
+blazorClient ->>+ blazorServer: HTTP request to <br /> "_auth/me" endpoint
+
+blazorServer -->> blazorServer: Acquire AuthenticationState <br /> using access token cookie
+
+blazorServer -->>- blazorClient: AuthenticationState
+
+blazorClient -->>- userServiceServer: AuthenticationState
+
+userServiceServer -->>- component: AuthenticationState
+component -->>- user: #32;
+```
+
 ### Sign-In
 
 ```mermaid
